try to fix menu element alignment tablet

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -482,13 +482,13 @@ footer > div.text-center {
 /*SMALL SCREEN SIZE (TABLET SIZE)*/
 @media(min-width: 768px) and (max-width: 991px){
 	/*Correcting the position of the elements in the menu list to fit them in one line as in the desktop screen*/
-	#nav-list > li {
+	ul#nav-list > li {
 		margin-right: 0px;
 		margin-left: 0px;
 		padding:0px;
 		font-size: .8em;
 	}
-	#logonav{
+	a#logonav{
 		font-size: .8em;
 		margin-right: 0px;
 		margin-left: 5px;
